# Adafruit_CircuitPython_MacroPad

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE  README.rst  README.rst.license  adafruit_macropad.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  setup.py.disabled
.github/workflows/: build.yml  release.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  requirements.txt
examples/: macropad_display_image.py  macropad_grid_layout.py  macropad_keyboard_layout.py  macropad_keyboard_mouse.py  macropad_led_animation_example.py  macropad_rainbow_keys.py  macropad_rotation.py  macropad_simpletest.py  macropad_simpletest_display.py  macropad_tone_keypad.py  macropad_tone_keypad_extended.py
examples/macropad_display_image/: blinka.bmp.license  macropad_display_image.py
examples/macropad_mp3/: macropad_mp3.py  slow.mp3.license  upbeats.mp3.license
